<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">


    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_type"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorWhite"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_popular"/>

            <TextView
                    android:id="@+id/tv_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/rv_popular"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_top_rated"/>

            <TextView
                    android:id="@+id/tv_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/rv_top_rated"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_upcoming"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>