<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity"
        android:background="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimaryDark">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimaryDark">
                <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/movie_title"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="20sp"/>


                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/iv_detail_movie"
                        android:layout_gravity="center"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="12sp"
                            android:text="@string/estreno"/>
                    <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:textAlignment="center"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="12sp"
                            android:text="@string/calificacion"/>
                    <TextView
                            android:id="@+id/tv_vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:textAlignment="center"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="12sp"
                            android:text="@string/idioma"/>
                    <TextView
                            android:id="@+id/tv_original_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:textAlignment="center"/>

                </LinearLayout>

                <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="14sp"/>

                <fragment
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/yv_Detail2"
                        android:layout_margin="8dp"
                        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>